--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,12 @@ jobs:
                subFolder: projects/datavis/ggplot
                runCmd: clj -Adev notebooks/render.clj
 
+    - name: render tutorial in projects/ml/onnx
+      uses: devcontainers/ci@v0.3
+      with:    
+               subFolder: projects/ml/onnx
+               runCmd: clj notebooks/render.clj
+
     - name: clean docs
       run: |
          rm -rf docs/*.*
