--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,13 @@ jobs:
                runCmd: clj notebooks/render.clj
                push: never
 
+    - name: render tutorial in projects/ml/sklearn-clj
+      uses: devcontainers/ci@v0.3
+      with:    
+               subFolder: projects/ml/sklearn-clj
+               runCmd: clj notebooks/sklearn.clj
+               push: never
+
     
     - name: clean docs
       run: |
