--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,17 @@ on:
 
 jobs:
 
+  detect-changes:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run changed-files with dir_names
+        id: changed-files-dir-names
+        uses: tj-actions/changed-files@v45
+        with:
+          dir_names: "true"
+      - name: print changed
+      - run: echo "${{detect-changes.outputs}}"   
+
   render-tutorials:
 
     runs-on: ubuntu-latest
