--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           dir_names: "true"
           
       - name: print changed
-        run: echo "${{detect-changes.outputs}}"   
+        run: echo "${{jobs.detect-changes.outputs}}"   
 
   render-tutorials:
 
