--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,8 @@ jobs:
           dir_names: "true"
           
       - name: print changed
-        run: echo "${{jobs.detect-changes.outputs}}"   
+        run: echo "${{steps.changed-files-dir-names.outputs}}"
+
 
   render-tutorials:
 
