--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           dir_names: "true"
           
       - name: print changed
-        run: echo "${{steps.changed-files-dir-names.outputs}}"
+        run: echo "Modified: ${{steps.changed-files-dir-names.outputs.modified_files}}"
 
 
   render-tutorials:
