--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
     
     
     - name: render tutorial in projects/noj
+      if: ${{ startsWith(steps.changed-files-dir-names.outputs.modified_files,'projects/noj')  }}
       uses: devcontainers/ci@v0.3
       with:    
                subFolder: projects/noj
