--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
     
     
     - name: render tutorial in projects/noj
-      if: ${{ startsWith(steps.changed-files-dir-names.outputs.modified_files,'projects/noj')  }}
+      if: ${{ startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/noj')  }}
       uses: devcontainers/ci@v0.3
       with:    
                subFolder: projects/noj
@@ -43,6 +43,7 @@ jobs:
 
 
     - name: render tutorial in projects/datavis/python/plotting
+      if: ${{ startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/datavis/python/plotting')  }}
       uses: devcontainers/ci@v0.3
       with:    
                subFolder: projects/datavis/python/plotting
@@ -51,6 +52,7 @@ jobs:
 
                
     - name: render tutorial in projects/datavis/ggplot
+      if: ${{ startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/datavis/ggplot')  }}
       uses: devcontainers/ci@v0.3
       with:    
                subFolder: projects/datavis/ggplot
@@ -59,6 +61,7 @@ jobs:
 
 
     - name: render tutorial in projects/ml/onnx
+      if: ${{ startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/ml/onnx')  }}
       uses: devcontainers/ci@v0.3
       with:    
                subFolder: projects/ml/onnx
@@ -66,6 +69,7 @@ jobs:
                push: never
 
     - name: render tutorial in projects/ml/sklearn-clj
+      if: ${{ startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/ml/sklearn-clj')  }}
       uses: devcontainers/ci@v0.3
       with:    
                subFolder: projects/ml/sklearn-clj
@@ -75,7 +79,7 @@ jobs:
     
     - name: clean docs
       run: |
-         rm -rf docs/*.*
+         #rm -rf docs/*.*
 
     - name: combine all tutorials
       uses: tzafrirben/babashka-docker-action@v1.1
