--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,15 +14,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       
-      - name: Run changed-files with dir_names
-        id: changed-files-dir-names
-        uses: tj-actions/changed-files@v45
-        with:
-          dir_names: "true"
-          
-      - name: print changed
-        run: echo "${{steps.changed-files-dir-names.outputs.modified_files}}"
-
 
   render-tutorials:
 
@@ -32,9 +23,19 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Run changed-files with dir_names
+      id: changed-files-dir-names
+      uses: tj-actions/changed-files@v45
+      with:
+        dir_names: "true"
+          
+    - name: print changed
+      run: echo "${{steps.changed-files-dir-names.outputs.modified_files}}"
+
+
     
     - name: render tutorial in projects/noj
-      if: ${{ startsWith(jobs.detect-changes.steps.changed-files-dir-names.outputs.modified_files[0],'projects/noj')  }}
+      if: ${{ startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/noj')  }}
       uses: devcontainers/ci@v0.3
       with:    
                subFolder: projects/noj
