--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
 
     
     - name: render tutorial in projects/noj
-      if: ${{ startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/noj')  }}
+      if: startsWith(steps.changed-files-dir-names.outputs.modified_files,'projects/noj')  
       uses: devcontainers/ci@v0.3
       with:    
                subFolder: projects/noj
@@ -41,7 +41,7 @@ jobs:
 
 
     - name: render tutorial in projects/datavis/python/plotting
-      if: ${{ startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/datavis/python/plotting')  }}
+      if: startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/datavis/python/plotting')
       uses: devcontainers/ci@v0.3
       with:    
                subFolder: projects/datavis/python/plotting
@@ -50,7 +50,7 @@ jobs:
 
                
     - name: render tutorial in projects/datavis/ggplot
-      if: ${{ startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/datavis/ggplot')  }}
+      if: startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/datavis/ggplot')  
       uses: devcontainers/ci@v0.3
       with:    
                subFolder: projects/datavis/ggplot
@@ -59,7 +59,7 @@ jobs:
 
 
     - name: render tutorial in projects/ml/onnx
-      if: ${{ startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/ml/onnx')  }}
+      if: startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/ml/onnx')
       uses: devcontainers/ci@v0.3
       with:    
                subFolder: projects/ml/onnx
@@ -67,7 +67,7 @@ jobs:
                push: never
 
     - name: render tutorial in projects/ml/sklearn-clj
-      if: ${{ startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/ml/sklearn-clj')  }}
+      if: startsWith(steps.changed-files-dir-names.outputs.modified_files[0],'projects/ml/sklearn-clj') 
       uses: devcontainers/ci@v0.3
       with:    
                subFolder: projects/ml/sklearn-clj
