--- a/projects/ml/sklearn-clj/.devcontainer/devcontainer.json
+++ b/projects/ml/sklearn-clj/.devcontainer/devcontainer.json
@@ -21,7 +21,9 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"betterthantomorrow.calva"
+				"betterthantomorrow.calva",
+				"ms-vscode.live-server",
+				"streetsidesoftware.code-spell-checker"
 			]
 		}
 	},
