prevent concurrent jobs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,9 @@ jobs:
   render-tutorials:
 
     runs-on: ubuntu-latest
+    concurrency:
+      group: build-tutorial
+      cancel-in-progress: true
     permissions:
       contents: write
     steps:
