--- a/projects/ml/sklearn-clj/.devcontainer/devcontainer.json
+++ b/projects/ml/sklearn-clj/.devcontainer/devcontainer.json
@@ -11,11 +11,10 @@
 		"ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {},
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
 		"ghcr.io/devcontainers-contrib/features/poetry:2": {},
-		"ghcr.io/wxw-matt/devcontainer-features/command_runner:latest": {
-           "command1": "bash < <(curl -s https://raw.githubusercontent.com/clojure-lsp/clojure-lsp/master/install)",
-           "command2": "bash < <(curl -s https://raw.githubusercontent.com/babashka/babashka/master/install)",
-		"command3": "bash -c 'wget https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein -O /usr/local/bin/lein && chmod +x /usr/local/bin/lein'"
-                }
+		 "ghcr.io/wxw-matt/devcontainer-features/command_runner:latest": {
+            //"command1": "bash < <(curl -s https://raw.githubusercontent.com/clojure-lsp/clojure-lsp/master/install)",
+            "command2": "bash < <(curl -s https://raw.githubusercontent.com/babashka/babashka/master/install)"
+                 }
 	},
 	"customizations": {
 		"vscode": {
