--- a/projects/ml/text-classification/.devcontainer/devcontainer.json
+++ b/projects/ml/text-classification/.devcontainer/devcontainer.json
@@ -13,6 +13,7 @@
 	"containerUser": "${localEnv:USER:vscode}",
 	"features": {
 		"ghcr.io/devcontainers/features/git:1": {},
+		"ghcr.io/iterative/features/dvc:1": {},
 		"ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {}
 
 	},
