--- a/projects/ml/text-classification/.devcontainer/devcontainer.json
+++ b/projects/ml/text-classification/.devcontainer/devcontainer.json
@@ -20,7 +20,8 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"betterthantomorrow.calva"
+				"betterthantomorrow.calva",
+				"iterative.dvc"
 			]
 		}
 	}
