--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,24 @@ jobs:
     - name: debug key
       env:
         OPEN_AI_KEY: ${{secrets.OPEN_AI_KEY}}
-      run: echo $OPEN_AI_KEY
+      run: |
+        curl https://api.openai.com/v1/chat/completions \
+          -H "Content-Type: application/json" \
+          -H "Authorization: Bearer $OPEN_AI_KEY" \
+          -d '{
+            "model": "gpt-3.5-turbo",
+            "messages": [
+            {
+              "role": "system",
+              "content": "You are a helpful assistant."
+            },
+            {
+            "role": "user",
+            "content": "Hello!"
+            }
+            ]
+          }'
+      
 
     - name: render all tutorials
       run: bb render_all.clj
