--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,32 @@ jobs:
       with:
         babashka-version: 1.4.192
 
-    - name: render all tutorials
-      run: bb render_all.clj
+    - name: debug key
       env:
         OPEN_AI_KEY: ${{secrets.OPEN_AI_KEY}}
+      run: |
+        curl https://api.openai.com/v1/chat/completions \
+          -H "Content-Type: application/json" \
+          -H "Authorization: Bearer $OPEN_AI_KEY" \
+          -d '{
+            "model": "gpt-3.5-turbo",
+            "messages": [
+            {
+              "role": "system",
+              "content": "You are a helpful assistant."
+            },
+            {
+            "role": "user",
+            "content": "Hello!"
+            }
+            ]
+          }'
+      
+
+    - name: render all tutorials
+      env:
+        OPEN_AI_KEY: ${{secrets.OPEN_AI_KEY}}
+      run: bb render_all.clj
 
 
     - name: combine all tutorials
